[package]
name = "rustcat"
version = "1.1.2"
authors = ["robiot"]
description = "rustcat - The Modern Port Listener & Reverse Shell"
license = "MIT"
repository = "https://github.com/robiot/rustcat"
edition = "2018"

[[bin]]
name = "rc"
path = "src/main.rs"

[dependencies]
structopt = "0.3.23"
colored = "2.0.0"
rustyline = "9.0.0"