[package]
name = "rustcat"
version = "2.1.0"
authors = ["robiot"]
description = "rustcat - The Modern Port Listener & Reverse Shell"
license = "MIT"
repository = "https://github.com/robiot/rustcat"
edition = "2021"

[[bin]]
name = "rcat"
path = "src/main.rs"

[dependencies]
clap = {version = "3.2.17", features = ["derive"]}
colored = "2.0.0"
rustyline = "10.0.0"

[target.'cfg(unix)'.dependencies]
termios = "0.3"
signal-hook = "0.3.14"
