[package]
name = "rustcat"
version = "3.0.0"
authors = ["robiot"]
description = "The Modern Port Listener and Reverse Shell"
license = "GPL-3.0-only"
repository = "https://github.com/robiot/rustcat"
edition = "2021"

[[bin]]
name = "rcat"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.9", features = ["derive"] }
colored = "2.0.0"
rustyline = "10.0.0"
log = "0.4.17"
fern = { version = "0.6.1", features = ["colored"] }

[target.'cfg(unix)'.dependencies]
termios = "0.3"
signal-hook = "0.3.17"
